--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "morgan": "~1.9.0",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.4"
+  },
+  "engines": {
+    "node": "10.4.1",
+    "npm": "6.4.1"
   }
 }
